Add hopper support for casks